# NeoMCPE

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  build.ps1  build.sh
.github/actions/setup-cache/: action.yml
.github/actions/setup-ninja/: action.yml
.github/workflows/: android.yml  build.yml  cmake-multiplatform.yml  release.yml
data/lang/: en_US.lang
glad/include/glad/: glad.h
glad/src/: glad.c
misc/web/: index.html
misc/windows/: WinSock2.h  Ws2tcpip.h
project/android/: AndroidManifest.xml
project/android/assets/lang/: en_US.lang
project/android/jni/: Android.mk  Application.mk
project/android_java/: AndroidManifest.xml
project/android_java/assets/lang/: en_US.lang
project/android_java/jni/: Android.mk  Application.mk
project/dedicated_server/: CMakeLists.txt
project/iosproj/: Launch Screen.storyboard
project/iosproj/minecraftpe/: minecraftpe-Info.plist
project/iosproj/minecraftpe.xcodeproj/: project.pbxproj
project/lib_projects/raknet/jni/: Android.mk
project/lib_projects/raknet/jni/RaknetSources/: FileList.cpp  WindowsIncludes.h
src/: AppPlatform.h  AppPlatform_android.h  AppPlatform_glfw.cpp  AppPlatform_glfw.h  AppPlatform_iOS.h  AppPlatform_iOS.mm  AppPlatform_win32.cpp  AppPlatform_win32.h  NinecraftApp.cpp  SharedConstants.cpp  SharedConstants.h  main.cpp  main_android.cpp  main_android.h  main_android_java.cpp  main_android_java.h  main_dedicated.cpp  main_glfw.h  main_win32.h
src/client/: Minecraft.cpp  Minecraft.h  MouseHandler.cpp  Option.cpp  Option.h  OptionStrings.cpp  OptionStrings.h  Options.cpp  Options.h  OptionsFile.cpp  OptionsFile.h
src/client/gamemode/: CreativeMode.cpp  CreativeMode.h  CreatorMode.cpp  CreatorMode.h  GameMode.cpp
src/client/gui/: Font.cpp  Gui.cpp  Gui.h  Screen.cpp  Screen.h
src/client/gui/components/: Button.cpp  GuiElement.h  GuiElementContainer.cpp  GuiElementContainer.h  ImageButton.cpp  ImageButton.h  KeyOption.cpp  KeyOption.h  LargeImageButton.cpp  OptionsGroup.cpp  OptionsGroup.h  OptionsItem.cpp  OptionsItem.h  OptionsPane.cpp  OptionsPane.h  ScrollingPane.cpp  ScrollingPane.h  Slider.cpp  Slider.h  SmallButton.cpp  SmallButton.h  TextBox.cpp  TextBox.h  TextOption.cpp  TextOption.h
src/client/gui/screens/: ConfirmScreen.cpp  ConfirmScreen.h  ConsoleScreen.cpp  ConsoleScreen.h  CreditsScreen.cpp  CreditsScreen.h  DeathScreen.cpp  DisconnectionScreen.h  InBedScreen.cpp  IngameBlockSelectionScreen.cpp  IngameBlockSelectionScreen.h  JoinByIPScreen.cpp  JoinByIPScreen.h  JoinGameScreen.h  OptionsScreen.cpp  OptionsScreen.h  PauseScreen.cpp  PauseScreen.h  ProgressScreen.h  ScreenChooser.cpp  ScreenChooser.h  SelectWorldScreen.cpp  SelectWorldScreen.h  SimpleChooseLevelScreen.cpp  SimpleChooseLevelScreen.h  StartMenuScreen.cpp  StartMenuScreen.h  TextEditScreen.cpp  TextEditScreen.h  UsernameScreen.cpp  UsernameScreen.h
src/client/gui/screens/crafting/: PaneCraftingScreen.cpp
src/client/gui/screens/touch/: TouchIngameBlockSelectionScreen.cpp  TouchIngameBlockSelectionScreen.h  TouchJoinGameScreen.cpp  TouchJoinGameScreen.h  (+4 more)
src/client/model/: HumanoidModel.cpp  HumanoidModel.h
src/client/model/geom/: Cube.cpp  ModelPart.cpp  Polygon.cpp  Polygon.h
src/client/player/: LocalPlayer.cpp  LocalPlayer.h
src/client/player/input/: IMoveInput.h  KeyboardInput.cpp  KeyboardInput.h  XperiaPlayInput.h
src/client/renderer/: Chunk.cpp  GameRenderer.cpp  GameRenderer.h  ItemInHandRenderer.cpp  LevelRenderer.cpp  LevelRenderer.h  Lighting.cpp  Lighting.h  Tesselator.cpp  Tesselator.h  TextureData.h  Textures.cpp  Textures.h  TileRenderer.cpp  TileRenderer.h  VertecDecl.h  gles.cpp  gles.h
src/client/renderer/entity/: EntityRenderDispatcher.cpp  EntityRenderer.cpp  EntityRenderer.h  HumanoidMobRenderer.cpp  HumanoidMobRenderer.h  ItemRenderer.cpp  ItemRenderer.h  MobRenderer.cpp  MobRenderer.h  PaintingRenderer.cpp  PlayerRenderer.cpp  PlayerRenderer.h
src/client/renderer/ptexture/: DynamicTexture.cpp  DynamicTexture.h
src/client/sound/: Sound.cpp  Sound.h  SoundEngine.cpp  SoundEngine.h  SoundEngine.mm
src/client/sound/data/: burp1.pcm
src/network/: ClientSideNetworkHandler.cpp  ServerSideNetworkHandler.cpp  ServerSideNetworkHandler.h
src/network/command/: CommandServer.h
src/network/packet/: SetTimePacket.h  StartGamePacket.h
src/platform/: CThread.cpp  CThread.h  HttpClient.cpp  HttpClient.h  PngLoader.cpp  PngLoader.h
src/platform/audio/: SoundSystemAL.cpp  SoundSystemAL.h  SoundSystemSL.cpp
src/platform/input/: Keyboard.cpp  Keyboard.h
src/raknet/: FileList.cpp  GetTime.cpp
src/server/: ServerPlayer.cpp  ServerPlayer.h
src/util/: Color.cpp  Mth.cpp  Mth.h  PerfRenderer.cpp  PerfTimer.h  ServerProfiler.cpp  ServerProfiler.h
src/world/: Difficulty.h
src/world/entity/: Entity.cpp  Entity.h  Mob.cpp  Mob.h
src/world/entity/animal/: Chicken.cpp  Cow.cpp  Pig.cpp  Sheep.cpp
src/world/entity/monster/: Skeleton.cpp  Zombie.cpp
src/world/entity/player/: Inventory.cpp  Player.cpp
src/world/item/: BowItem.h  BucketItem.cpp  BucketItem.h  DyePowderItem.cpp  FlintAndSteelItem.h  Item.cpp  Item.h  ItemInclude.h  MonsterPlacerItem.cpp  MonsterPlacerItem.h  SaddleItem.h  ShearsItem.h
src/world/item/crafting/: Recipes.cpp
src/world/level/: FoliageColor.cpp  FoliageColor.h  GrassColor.cpp  GrassColor.h  Level.cpp  Level.h  LevelSettings.h  LevelSource.h  Region.cpp  Region.h
src/world/level/biome/: Biome.cpp  Biome.h  BiomeSource.cpp  BiomeSource.h  ForestBiome.h  RainforestBiome.h
src/world/level/chunk/: ChunkCache.h  LevelChunk.cpp
src/world/level/dimension/: Dimension.cpp  Dimension.h  NormalDayCycleDimension.h
src/world/level/levelgen/: CanyonFeature.cpp  CanyonFeature.h  RandomLevelSource.cpp  RandomLevelSource.h
src/world/level/storage/: ExternalFileLevelStorage.cpp  LevelData.cpp  LevelData.h
src/world/level/tile/: CakeTile.cpp  CakeTile.h  DoorTile.cpp  DoorTile.h  FireTile.h  GrassTile.cpp  GrassTile.h  LeafTile.h  LiquidTileStatic.h  NetherReactorPattern.cpp  Sapling.h  TallGrass.cpp  Tile.cpp  TileInclude.h  TorchTile.h
(+10 files in other folders)
